# qwc-document-service

./: Dockerfile  README.md  entrypoint.sh  libs.txt  pyproject.toml  requirements.txt  server.py
.github/workflows/: main.yml
schemas/: qwc-document-service.json
src/: report_compiler.py  server.py
tests/: Blank_A4.jrxml  Country.jrxml  Country_single.jrxml  Static.jrxml  api_tests.py  test_report.jrxml
tests/config/default/: documentConfig.json  permissions.json
tests/subdir/: Country_subreport.jasper  Country_subreport.jrxml  Point.jasper  Point.jrxml
