[project]
name = "qwc-document-service"
version = "v2026.04.15"
description = "Document service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask~=3.1.1",
    "Werkzeug~=3.1.3",
    "Flask-JWT-Extended~=4.7.1",
    "flask-restx~=1.3.0",
    "requests~=2.33.0",
    "psycopg2~=2.9.10",
    "SQLAlchemy~=2.0.42",
    "qwc-services-core~=1.5.0",
    "JPype1~=1.6.0",
    "freetype-py>=2.5.1",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.0.1",
]
